# lakshya_custom

./: .gitignore  README.md  pyproject.toml
lakshya_custom/: hooks.py  modules.txt  wp_birthday.py
lakshya_custom/lakshya_custom/doctype/essl_attendance_logs/: essl_attendance_logs.js  essl_attendance_logs.json  essl_attendance_logs.py  test_essl_attendance_logs.py
lakshya_custom/lakshya_custom/get_quatation/: quatation.py
lakshya_custom/lakshya_custom/page/supplier_comparasion/: supplier_comparasion.js  supplier_comparasion.json
lakshya_custom/lakshya_custom/report/leave_report/: leave_report.js  leave_report.json  leave_report.py
lakshya_custom/lakshya_custom/report/monthly_attendance_sheet_v2/: monthly_attendance_sheet_v2.js  monthly_attendance_sheet_v2.json  monthly_attendance_sheet_v2.py
lakshya_custom/lakshya_custom/report/supplier_quotation_comparative/: supplier_quotation_comparative.js  supplier_quotation_comparative.json  supplier_quotation_comparative.py
lakshya_custom/public/js/: request_for_quatation.js
lakshya_custom/request_for_quatation/: get_supplier.py
